# sare

./: .editorconfig  .gitignore  Cargo.toml  Documentations.txt  README.md  Sare.txt  StyleGuide.txt  TODO.txt  build_gui.sh  build_real_gui.sh  build_sare.sh  cargo-clean  direct_build.sh  disable_cursor_proxy.sh  fix_japanese_docs.sh  minimal_gui.rs  run_sare.sh  run_terminal.sh  run_working_terminal.sh  simple_test.rs  test_cd_fix.sh  test_gui.rs  test_sare_cd.sh  test_sare_features.sh  test_simple.rs  test_window.rs
Docs/: ModularRestructure.md  advanced_rendering_engine.md  ansi_protocol_implementation.md  cd_fix_summary.md  demo_sare_features.md
Security/: Cargo.toml  audit.rs  encryption.rs  isolation.rs  mod.rs  monitoring.rs  permissions.rs  sandbox.rs  validation.rs
Tests/: README.md  run_tests.sh  test_advanced_rendering.rs  test_ansi_protocol.rs  test_completion.rs  test_core_functionality.rs  test_expansion.rs  test_features.rs  test_heredoc.rs  test_history.rs  test_multiline.rs  test_pipeline.sh  test_runner.rs  test_substitution.rs  test_unicode.rs
sare-shell/: Cargo.toml  README.md  StyleGuide.txt
sare-shell/src/: lib.rs  main.rs
sare-shell/src/config/: mod.rs
sare-shell/src/shell/: builtins.rs  job.rs  parser.rs
sare-shell/src/shell/commands/: development.rs  network.rs  system.rs  text.rs
sare-terminal/: Cargo.toml  README.md
sare-terminal/src/: lib.rs  main.rs
sare-terminal/src/advanced/: mod.rs  paste_protection.rs  selection_copy.rs
sare-terminal/src/config/: config_files.rs  hot_reload.rs  key_binding_system.rs  mod.rs  plugin_system.rs  theme_engine.rs
sare-terminal/src/debug/: error_recovery.rs  logger.rs  mod.rs  profiler.rs  testing.rs
sare-terminal/src/features/: hyperlink_support.rs  image_support.rs  input_method.rs  mod.rs  paste_protection.rs  search_functionality.rs  selection_copy.rs  semantic_highlighting.rs
sare-terminal/src/gui/: expansion.rs  mod.rs  pane.rs  renderer.rs  substitution.rs  terminal.rs
sare-terminal/src/history/: completion.rs
sare-terminal/src/session/: mod.rs  session_manager.rs  session_sharing.rs  session_store.rs  tab_manager.rs  window_manager.rs
sare-terminal/src/terminal/: mod.rs  process.rs  protocol.rs  pty.rs  renderer.rs  shell.rs
sare-terminal/src/tui/: layout.rs  mod.rs  prompt.rs
sare-terminal/src/tui/gpu/: advanced_renderer.rs  cpu_backend.rs  fonts.rs  memory_optimizer.rs  mod.rs  renderer.rs  skia_backend.rs  text.rs  wgpu_backend.rs
sare-terminal/src/tui/panes/: layout.rs  mod.rs  session.rs
sare-terminal/src/ui/: context_menu.rs  drag_drop.rs  mod.rs  status_bar.rs  toolbar.rs
sare-terminal/src/ui/widgets/: buttons.rs  charts.rs  indicators.rs  mod.rs  progress_bar.rs  tables.rs
sare-terminal/src/unicode/: bidi_handler.rs  mod.rs  width_handler.rs
simple-sare-terminal/: Cargo.toml  run_terminal.sh
simple-sare-terminal/src/: main.rs
src/: lib.rs  main.rs
src/gui/: expansion.rs  heredoc.rs  mod.rs  multiline.rs  pane.rs  renderer.rs  substitution.rs  terminal.rs
src/history/: completion.rs  mod.rs  navigation.rs
src/shell/: builtins.rs  executor.rs  job.rs  mod.rs  parser.rs
src/shell/commands/: development.rs  filesystem.rs  mod.rs  network.rs  process.rs  system.rs  text.rs
src/terminal/: io.rs  mod.rs  process.rs  pty.rs  shell.rs
src/terminal/io/: background.rs  mod.rs  pipelines.rs  redirection.rs  streams.rs  utils.rs
src/tui/: layout.rs  mod.rs  output.rs  panes.rs
src/tui/gpu/: fonts.rs  mod.rs  renderer.rs  skia_backend.rs  text.rs  wgpu_backend.rs
src/tui/panes/: layout.rs  mod.rs  navigation.rs  session.rs
