[package]
name = "sare"
version = "0.1.0"
edition = "2021"
authors = ["KleaSCM <KleaSCM@gmail.com>"]
description = "A POSIX-compatible Rust shell with TUI interface"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.26.0"
crossterm = "0.27.0"

# Command execution and process management
tokio = { version = "1.0", features = ["full"] }

# Parsing and command handling
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"

# File system operations
dirs = "5.0"
walkdir = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for config and history
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
whoami = "1.0"

# System calls and process management
libc = "0.2"

[dev-dependencies]
criterion = "0.5" 