[package]
name = "working-sare-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.26"
egui = "0.26"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] } 