[package]
name = "sare-security"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
url = "2.0"
rand = "0.8"
base64 = "0.21"
aes-gcm = "0.10"
nix = "0.26"
libc = "0.2" 