[package]
name = "sare-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
nix = "0.26"
regex = "1.0"
glob = "0.3"
dirs = "5.0"
whoami = "1.4"
ratatui = "0.24" 