[package]
name = "sare-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
nix = "0.26"
egui = "0.24"
eframe = "0.24"
ratatui = "0.24"
crossterm = "0.27"
skia-safe = "0.66"
wgpu = "0.17"
whoami = "1.4"
dirs = "5.0"
unicode-bidi = "0.3"
unicode-normalization = "0.1"
unicode-width = "0.1"
regex = "1.0"
async-trait = "0.1"
fontdue = "0.7" 